--- a/index.html
+++ b/index.html
@@ -112,11 +112,8 @@
 
             <div class="loading-text-fullscreen">正在加载中...</div>
 
-            <!-- 精确进度显示 -->
-            <div class="progress-container-fullscreen">
-                <div class="progress-bar-fullscreen" id="progressBarFullscreen"></div>
-            </div>
-            <div class="progress-percentage" id="progressPercentage">0%</div>
+            <!-- 使用新的进度条组件 -->
+            <div id="loading-progress-container" style="margin-top: 30px;"></div>
         </div>
     </div>
 
@@ -284,6 +281,9 @@
     </button>
 
     <!-- JavaScript -->
+    <script src="progress-component.js"></script>
+    <!-- JavaScript -->
+    <script src="progress-component.js"></script>
     <script src="main.js"></script>
 </body>
 
