--- a/index.html
+++ b/index.html
@@ -107,13 +107,23 @@
                              fill="url(#starGradient)" 
                              filter="url(#glow)"
                              class="rotating-star"/>
+                    <!-- 整合的进度条环形动画 -->
+                    <circle cx="50" cy="50" r="45" 
+                            fill="none" 
+                            stroke="rgba(255, 215, 0, 0.3)" 
+                            stroke-width="2"/>
+                    <circle cx="50" cy="50" r="45" 
+                            fill="none" 
+                            stroke="url(#starGradient)" 
+                            stroke-width="2"
+                            stroke-linecap="round"
+                            stroke-dasharray="283"
+                            stroke-dashoffset="283"
+                            class="progress-circle"/>
                 </svg>
             </div>
 
             <div class="loading-text-fullscreen">正在加载中...</div>
-
-            <!-- 使用新的进度条组件 -->
-            <div id="loading-progress-container" style="margin-top: 30px;"></div>
         </div>
     </div>
 
@@ -281,9 +291,6 @@
     </button>
 
     <!-- JavaScript -->
-    <script src="progress-component.js"></script>
-    <!-- JavaScript -->
-    <script src="progress-component.js"></script>
     <script src="main.js"></script>
 </body>
 
