--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
             </div>
 
             <div class="loading-text-fullscreen">正在加载中...</div>
+            
+            <!-- 水平进度条容器 -->
+            <div class="progress-bar-container">
+                <div class="progress-bar">
+                    <div class="progress-bar-fill"></div>
+                </div>
+                <div class="progress-percentage">0%</div>
+            </div>
         </div>
     </div>
 
