--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- 基础SEO信息 -->
-    <title>云云星羽网络科技工作室 - 创新科技，引领未来</title>
+    <title>云云星羽网络科技工作室</title>
     <meta name="description" content="三亚海棠区云云星羽网络科技工作室，专业提供网络技术服务、定制软件开发、人工智能解决方案，助力企业数字化转型升级。采用简约科技风设计，展现专业技术实力。">
     <meta name="keywords" content="云云星羽,网络科技,软件开发,人工智能,数字化转型,三亚科技公司,简约科技风,官网设计">
     <meta name="author" content="云云星羽网络科技工作室">
