--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Open Graph 社交分享 -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="云云星羽网络科技工作室 - 创新科技，引领未来">
-    <meta property="og:description" content="专业提供网络技术服务、软件开发、人工智能解决方案，助力企业数字化转型。简约科技风设计，展现专业实力。">
+    <meta property="og:description" content="专业提供网络技术服务、软件开发、人工智能解决方案，助力企业数字化转型。">
     <meta property="og:image" content="https://q1.qlogo.cn/g?b=qq&nk=521001121&s=640">
     <meta property="og:url" content="https://starssr.com/">
 
