--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- 结构化数据 -->
     <script type="application/ld+json">
     {
-        "@context": "https://starssr.com",
+        "@context": "https://schema.org",
         "@type": "Organization",
         "name": "三亚海棠区云云星羽网络科技工作室",
         "alternateName": "云云星羽",
