--- a/index.html
+++ b/index.html
@@ -26,6 +26,35 @@
     <meta name="QQ:url" content="https://starssr.com/">
 
     <!-- 图标和主题 -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%2300D4FF'%3E%3Cpath d='M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z'/%3E%3C/svg%3E">
+<!DOCTYPE html>
+<html lang="zh-CN">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- 基础SEO信息 -->
+    <title>云云星羽网络科技工作室</title>
+    <meta name="description" content="三亚海棠区云云星羽网络科技工作室，专业提供网络技术服务、定制软件开发、人工智能解决方案，助力企业数字化转型升级。采用简约科技风设计，展现专业技术实力。">
+    <meta name="keywords" content="云云星羽,网络科技,软件开发,人工智能,数字化转型,三亚科技公司,简约科技风,官网设计">
+    <meta name="author" content="云云星羽网络科技工作室">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph 社交分享 -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="云云星羽网络科技工作室 - 创新科技，引领未来">
+    <meta property="og:description" content="专业提供网络技术服务、软件开发、人工智能解决方案，助力企业数字化转型。">
+    <meta property="og:image" content="https://q1.qlogo.cn/g?b=qq&nk=521001121&s=640">
+    <meta property="og:url" content="https://starssr.com/">
+
+    <!-- QQ分享小卡片支持 -->
+    <meta name="QQ:title" content="云云星羽网络科技工作室 - 创新科技，引领未来">
+    <meta name="QQ:description" content="专业提供网络技术服务、软件开发、人工智能解决方案，助力企业数字化转型">
+    <meta name="QQ:image" content="https://q1.qlogo.cn/g?b=qq&nk=521001121&s=640">
+    <meta name="QQ:url" content="https://starssr.com/">
+
+    <!-- 图标和主题 -->
     <link rel="icon" type="image/png" href="https://q1.qlogo.cn/g?b=qq&nk=521001121&s=100">
     <meta name="theme-color" content="#00D4FF">
 
